--- a/FARMATICS/FARMATICS.vbproj
+++ b/FARMATICS/FARMATICS.vbproj
@@ -86,6 +86,12 @@
     <Compile Include="forms\frmFichas.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="forms\frmHacer_Venta.Designer.vb">
+      <DependentUpon>frmHacer_Venta.vb</DependentUpon>
+    </Compile>
+    <Compile Include="forms\frmHacer_Venta.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="forms\frmLogin.Designer.vb">
       <DependentUpon>frmLogin.vb</DependentUpon>
     </Compile>
@@ -114,6 +120,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="forms\frmFichas.resx">
       <DependentUpon>frmFichas.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\frmHacer_Venta.resx">
+      <DependentUpon>frmHacer_Venta.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="forms\frmLogin.resx">
       <DependentUpon>frmLogin.vb</DependentUpon>
