--- a/Farmatics/FARMATICS.vbproj
+++ b/Farmatics/FARMATICS.vbproj
@@ -113,6 +113,11 @@
     <Compile Include="DatabaseDataSet.vb">
       <DependentUpon>DatabaseDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="FacturaDataSet.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FacturaDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="forms\frmCaja.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -182,6 +187,7 @@
     <EmbeddedResource Include="ADMINISTRADOR\frmVisualizarReportes.resx">
       <DependentUpon>frmVisualizarReportes.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ADMINISTRADOR\Report1.rdlc" />
     <EmbeddedResource Include="forms\frmCaja.resx">
       <DependentUpon>frmCaja.vb</DependentUpon>
     </EmbeddedResource>
@@ -209,7 +215,6 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="REPORTES\Plantilla.rdlc" />
   </ItemGroup>
   <ItemGroup>
     <None Include="DatabaseDataSet.xsc">
@@ -223,16 +228,29 @@
     <None Include="DatabaseDataSet.xss">
       <DependentUpon>DatabaseDataSet.xsd</DependentUpon>
     </None>
+    <None Include="FacturaDataSet.xsc">
+      <DependentUpon>FacturaDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="FacturaDataSet.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>FacturaDataSet.Designer.vb</LastGenOutput>
+    </None>
+    <None Include="FacturaDataSet.xss">
+      <DependentUpon>FacturaDataSet.xsd</DependentUpon>
+    </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
     </None>
+    <None Include="My Project\DataSources\Factura.datasource" />
     <None Include="My Project\DataSources\frmCaja.datasource" />
     <None Include="My Project\DataSources\frmFichas.datasource" />
     <None Include="My Project\DataSources\frmHacer_Venta.datasource" />
     <None Include="My Project\DataSources\frmLogin.datasource" />
     <None Include="My Project\DataSources\frmMenu.datasource" />
     <None Include="My Project\DataSources\frmRegistroproductos.datasource" />
+    <None Include="My Project\DataSources\ListaProductos.datasource" />
     <None Include="My Project\DataSources\WindowsApplicationFARMATICS.My.MyApplication.datasource" />
     <None Include="My Project\DataSources\WindowsApplicationFARMATICS.My.MySettings.datasource" />
     <None Include="My Project\Settings.settings">
@@ -329,6 +347,9 @@
     <None Include="Resources\login_variant_icon_1384101.png" />
     <None Include="Resources\login_variant_icon_138410.png" />
     <None Include="Resources\cslogin_94432.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="REPORTES\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
