--- a/Farmatics/FARMATICS.vbproj
+++ b/Farmatics/FARMATICS.vbproj
@@ -118,6 +118,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>FacturaDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="forms\frmInventario.Designer.vb">
+      <DependentUpon>frmInventario.vb</DependentUpon>
+    </Compile>
+    <Compile Include="forms\frmInventario.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="forms\frmCaja.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -188,6 +194,9 @@
       <DependentUpon>frmVisualizarReportes.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ADMINISTRADOR\Report1.rdlc" />
+    <EmbeddedResource Include="forms\frmInventario.resx">
+      <DependentUpon>frmInventario.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="forms\frmCaja.resx">
       <DependentUpon>frmCaja.vb</DependentUpon>
     </EmbeddedResource>
