--- a/Farmatics/FARMATICS.vbproj
+++ b/Farmatics/FARMATICS.vbproj
@@ -110,6 +110,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>FacturaDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="FacturaDataSet.vb">
+      <DependentUpon>FacturaDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="forms\frmInventario.Designer.vb">
       <DependentUpon>frmInventario.vb</DependentUpon>
     </Compile>
@@ -178,12 +181,7 @@
     <Compile Include="REPORTES\frmReportesClientes.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="REPORTES\frmReporteEmpleados.Designer.vb">
-      <DependentUpon>frmReporteEmpleados.vb</DependentUpon>
-    </Compile>
-    <Compile Include="REPORTES\frmReporteEmpleados.vb">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="REPORTES\Reportes.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="AboutBox1.resx">
@@ -220,12 +218,10 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="REPORTES\Form1.resx">
-      <DependentUpon>frmReporteEmpleados.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="REPORTES\frmReportesClientes.resx">
       <DependentUpon>frmReportesClientes.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="REPORTES\Report2.rdlc" />
   </ItemGroup>
   <ItemGroup>
     <None Include="FacturaDataSet.xsc">
@@ -244,6 +240,7 @@
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
     </None>
     <None Include="My Project\DataSources\Factura.datasource" />
+    <None Include="My Project\DataSources\FacturaDataSet.datasource" />
     <None Include="My Project\DataSources\frmCaja.datasource" />
     <None Include="My Project\DataSources\frmFichas.datasource" />
     <None Include="My Project\DataSources\frmHacer_Venta.datasource" />
